--- a/package.json
+++ b/package.json
@@ -43,9 +43,10 @@
     "@angular/platform-browser": "6.0.0",
     "@angular/platform-browser-dynamic": "6.0.0",
     "@angular/router": "6.0.0",
-    "@nebular/auth": "2.0.0-rc.9",
-    "@nebular/security": "2.0.0-rc.9",
-    "@nebular/theme": "2.0.0-rc.9",
+    "@nebular/auth": "2.0.2",
+    "@nebular/bootstrap": "^2.0.2",
+    "@nebular/security": "2.0.2",
+    "@nebular/theme": "2.0.2",
     "@ng-bootstrap/ng-bootstrap": "1.0.0",
     "bootstrap": "4.0.0",
     "classlist.js": "1.1.20150312",
@@ -64,6 +65,8 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.6.0",
+    "@angular/cdk": "^7.0.3",
     "@angular/cli": "6.0.0",
     "@angular/compiler-cli": "6.0.0",
     "@angular/language-service": "6.0.0",
@@ -89,7 +92,6 @@
     "ts-node": "3.2.2",
     "tslint": "5.7.0",
     "tslint-language-service": "0.9.6",
-    "typescript": "2.7.2",
-    "@angular-devkit/build-angular": "~0.6.0"
+    "typescript": "2.7.2"
   }
 }
